--- a/rev/templates/rev/index.html
+++ b/rev/templates/rev/index.html
@@ -1,5 +1,11 @@
 {% extends 'rev/nav.html' %}
 {% block body %}
+{% if not request.session.username %}
+   <div class="col-lg-12 login-btm login-button">
+        <a href="{% url 'login' %}" class="btn btn-outline-primary float-right mt-1 mr-2">LOGIN</a>
+    </div>
+{%endif%}
+
       <div class="container-fluid" text-align="justify">
             <h1>Introduction</h1>
             <p>
